--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,23 @@
 {
-    "liveServer.settings.port": 5502
+    "liveServer.settings.port": 5502,
+    "workbench.colorCustomizations": {
+        "activityBar.activeBackground": "#dcccfd",
+        "activityBar.background": "#dcccfd",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#f5570a",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "commandCenter.border": "#15202b99",
+        "sash.hoverBorder": "#dcccfd",
+        "statusBar.background": "#b99bfc",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#9669fb",
+        "statusBarItem.remoteBackground": "#b99bfc",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#b99bfc",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#b99bfc99",
+        "titleBar.inactiveForeground": "#15202b99"
+    },
+    "peacock.color": "#b99bfc"
 }
